--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,17 @@
 :root {
-  --light-pink: #FFE6E6;
-  --dark-pink: #FF5454;
-  --blue: #001AFF;
-
   --navy: #5D799E;
   --mid-navy: #C7D0DC;
   --light-navy: #E9ECF0;
+  --mono-font: 'Cutive Mono', monospace;
+}
+
+::selection {
+  background: var(--navy); /* WebKit/Blink Browsers */
+  color: white;
+}
+::-moz-selection {
+  background: var(--navy); /* Gecko Browsers */
+  color: white;
 }
 
 .pointer { cursor: pointer; }
@@ -22,23 +28,36 @@
   color: var(--navy);
 }
 
+.max-width-5 {
+  max-width: 72rem;
+}
+
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
 }
 p {
-  line-height: 33px;
-  letter-spacing: 0.5px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  font-family: var(--mono-font);
 }
 .blue {
   color: var(--navy);
 }
+.white {
+  color: white;
+}
+.bg-navy {
+  background-color: var(--navy);
+}
 body {
-  font-family: 'Neuzeit Grotesk', 'Questrial', sans-serif;
+  font-family: var(--mono-font);
 }
 .outer {
-  border-left: 10px solid white;
-  border-right: 10px solid white;
+  border-left: 20px solid white;
+  border-right: 20px solid white;
+  border-top: 20px solid white;
+  border-bottom: 20px solid white;
   background-color: var(--light-navy);
 }
 .product {
@@ -46,13 +65,23 @@ body {
   color: white;
   transition: 120ms transform ease-in-out;
 }
-.product:hover {
-  transform: translateY(-6px);
+.product:hover .copy {
+  opacity: 1;
+}
+.product:hover img {
+  opacity: 0.1;
+  transition: 60ms opacity ease-in-out;
 }
 .product .copy {
+  transition: 60ms opacity ease-in-out;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: left;
+  color: var(--navy);
+  opacity: 0;
   position: absolute;
-  top: 0;
   left: 0;
+  right: 0;
 }
 h3, h2, h4, h5 {
   letter-spacing: 1px;
@@ -74,37 +103,31 @@ h3, h2, h4, h5 {
     height: 100%;
     width: 100px;
   }
-  .product:nth-child(odd) {
-    padding-left: initial;
-  }
-  .product:nth-child(even) {
-    padding-right: initial;
-  }
-  .product:nth-child(even) {
-    padding-right: initial;
-  }
-  .product:nth-child(odd) .copy {
-    left: initial;
-  }
   /* First */
-  .product:nth-child(3n+2) {
-    padding-right: 2.6rem;
+  .product:nth-child(4n+2) {
+    padding-right: 12px;
   }
-  /* Middle */
-  .product:nth-child(3n+3) {
-    padding-left: 1.3rem;
-    padding-right: 1.3rem;
+  /* Middle Left */
+  .product:nth-child(4n+3) {
+    padding-left: 4px;
+    padding-right: 8px;
   }
-  .product:nth-child(3n+3) .copy {
-    left: 1.3rem;
+  .product:nth-child(4n+3) .copy {
+  }
+  /* Middle Right */
+  .product:nth-child(4n+4) {
+    padding-left: 8px;
+    padding-right: 4px;
+  }
+  .product:nth-child(4n+4) .copy {
   }
   /* Last */
-  .product:nth-child(3n+1) {
-    padding-left: 2.6rem;
+  .product:nth-child(4n+1) {
+    padding-left: 12px;
   }
-  .product:nth-child(3n+1) .copy {
-    left: 2.6rem;
+  .product:nth-child(4n+1) .copy {
   }
+
   .pad-me {
     padding-left: 2rem;
   }
@@ -113,18 +136,19 @@ h3, h2, h4, h5 {
   position: relative;
 }
 #mailchimp-form input {
+  font-family: var(--mono-font);
   border-radius: 0;
   outline: none;
-  width: 69%;
-  padding: 24px;
+  width: 100%;
+  padding: 14px 20px 15px 20px;
   border: 0;
   font-size: 1.2rem;
   background-color: var(--mid-navy);
 }
 #mailchimp-form button {
+  position: absolute;
+  height: 100%;
   border-radius: 0px;
-  position: relative;
-  height: 70px;
   width: 30%;
   background-color: var(--navy);
   color: white;
@@ -135,26 +159,16 @@ h3, h2, h4, h5 {
   font-weight: bolder;
   letter-spacing: 1px;
   font-size: 1.2rem;
-}
-.product .flag {
-  position: absolute;
-  bottom: 30px;
-  margin-left: -40px;
-  background-color: var(--navy);
-  border-radius: 999px;
-  text-align: center;
-  width: 100px;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-family: var(--mono-font);
 }
 .prompt {
+  font-family: var(--mono-font);
+  border-bottom: 2px solid var(--navy);
+  display: inline-block;
+  padding-bottom: 4px;
   font-size: 1.25rem;
   letter-spacing: 1px;
 }
-.product .flag .flag-inner {
-}
 .product img {
-  border-bottom: 5px solid var(--blue);
+  border-bottom: 5px solid var(--navy);
 }
