--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -23,8 +23,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>LADIES OF THE LEAF</title>
-    <meta name="description" content="Enter Now to Win a ~Herbal~ Summer Survival Pack Valued at $800">
+    <title>Cozy Chill Vibes Club</title>
+    <meta name="description" content="Enter Now to Win a Winter Survival Pack Valued at $1235">
     <meta name="viewport" content="width=device-width">
 
     <meta content="http://leaf-ladies.webhook.org/static/images/share.jpg" property="og:image">
@@ -41,7 +41,7 @@
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
     <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
 
     {# Put your CSS in here and we'll minify it into one file. No CDN scripts. More info: #}
     {# http://www.webhook.com/docs/minify-your-js-and-css/ #}
