--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -23,21 +23,20 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Cozy Chill Vibes Club</title>
+    <title>The Cozy Chill Vibes Club</title>
     <meta name="description" content="Enter Now to Win a Winter Survival Pack Valued at $1235">
     <meta name="viewport" content="width=device-width">
 
     <meta content="http://leaf-ladies.webhook.org/static/images/share.jpg" property="og:image">
-    <meta content="LADIES OF THE LEAF" property="og:title">
-    <meta content="Enter Now to Win a ~Herbal~ Summer Survival Pack Valued at $800" property="og:description">
+    <meta content="The Cozy Chill Vibes Club" property="og:title">
+    <meta content="Enter Now to Win a Winter Survival Pack Valued at $1235" property="og:description">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="LADIES OF THE LEAF">
-    <meta name="twitter:description" content="Enter Now to Win a ~Herbal~ Summer Survival Pack Valued at $800">
+    <meta name="twitter:title" content="The Cozy Chill Vibes Club">
+    <meta name="twitter:description" content="Enter Now to Win a Winter Survival Pack Valued at $1235">
     <meta name="twitter:image" content="http://leaf-ladies.webhook.org/static/images/share.jpg">
 
     <link rel="shortcut icon" href="/static/images/favicon.png">
-    <link rel="apple-touch-icon" href="/static/images/touch-icon.png">
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
     <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
